save all pre data with sharedprefs, ready to insert sqlite

--- a/res/layout/activity_new_task.xml
+++ b/res/layout/activity_new_task.xml
@@ -23,6 +23,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:onClick="setPriority"
             android:text="@string/new_task_priority" />
     </LinearLayout>
 
@@ -31,10 +32,11 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+        android:onClick="setCategory"
         android:text="@string/new_task_category" />
 
     <EditText
-        android:id="@+id/editText1"
+        android:id="@+id/editTextTitleTask"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
@@ -45,7 +47,7 @@
     </EditText>
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/editTextContentTask"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="3"
@@ -58,6 +60,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+        android:onClick="validateNewTask"
         android:text="@string/new_task_validate" />
 
 </LinearLayout>
