--- a/res/layout/custom_task_row_view.xml
+++ b/res/layout/custom_task_row_view.xml
@@ -8,16 +8,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="14sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:paddingTop="10dp"
+        android:paddingLeft="30dp"/>
 
     <TextView
         android:id="@+id/initial_date_cv"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:paddingLeft="30dp"/>
 
     <TextView
         android:id="@+id/initial_hour_cv"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:paddingLeft="30dp"/>
 
 </LinearLayout>
